--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>tech.guanli.boot.suite</groupId>
-    <artifactId>springboot-starter-parent</artifactId>
-    <version>1.0.0-RELEASE</version>
-  </parent>
-  <groupId>tech.guanli.boot.suite</groupId>
-  <artifactId>mybatis-plus-dml-history-mongodb-store-spring-boot-starter</artifactId>
-  <version>1.0.0-RELEASE</version>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>tech.guanli.boot.suite</groupId>
+		<artifactId>springboot-starter-parent</artifactId>
+		<version>1.0.1-RELEASE</version>
+	</parent>
+	<artifactId>mybatis-plus-dml-history-mongodb-store-spring-boot-starter</artifactId>
+	<version>1.0.0-RELEASE</version>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version2.0</name>
+			<url>http://www.apache.org/licenses/</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<url>https://github.com/guanli-developer/boot-suite-mybatis-plus-dml-history-mongodb-store-spring-boot-starter</url>
+		<connection>https://github.com/guanli-developer/boot-suite-mybatis-plus-dml-history-mongodb-store-spring-boot-starter.git</connection>
+		<developerConnection>https://github.com/guanli-developer/boot-suite-mybatis-plus-dml-history-mongodb-store-spring-boot-starter</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<name>Li.Guan</name>
+			<email>guanli_developer@aliyun.com</email>
+		</developer>
+	</developers>
 </project>
