--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,22 @@
 		<version>1.0.1-RELEASE</version>
 	</parent>
 	<artifactId>mybatis-plus-dml-history-mongodb-store-spring-boot-starter</artifactId>
-	<version>1.0.0-RELEASE</version>
+	<version>1.0.1-RELEASE</version>
+	<dependencies>
+		<dependency>
+			<groupId>tech.guanli.boot.suite</groupId>
+			<artifactId>mybatis-plus-dml-history-spring-boot-starter</artifactId>
+			<version>1.0.0-RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+	</dependencies>
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version2.0</name>
